--- a/tpl/app.html
+++ b/tpl/app.html
@@ -1,5 +1,5 @@
   
- <div id="perspective" class="perspective effect-laydown">
+ <div id="perspective" class="perspective effect-rotateleft">
    <div class="slamcontainer">
   <!-- navbar -->
   <div data-ng-include=" 'tpl/blocks/header.html' " class="app-header navbar">
@@ -27,8 +27,8 @@
    </div>
    
    <nav class="outer-nav left vertical">
-				<a ui-sref="app.dashboard-v1" class="icon-home" >Home</a>
-				<a ui-sref="app.newForm" class="icon-mail">Add new Friends</a>
+				<a ui-sref="app.dashboard-v1" ng-click="app.settings.menuFolded = false" class="icon-home" >Home</a>
+				<a ui-sref="app.newForm.profile" ng-click="app.settings.menuFolded = false"  class="icon-mail">Add new Friends</a>
 				<a href="#" class="icon-lock">Settings</a>
 			</nav>
 			
