--- a/tpl/page_lockme.html
+++ b/tpl/page_lockme.html
@@ -1,7 +1,7 @@
 <div>
   
      <div class="animated fadeInUp text-center stage" style="width:128px; height:128px;margin:100px 0 0 65px;">
-      <a href="app.detail">
+      <a ui-sref="app.detail">
         <div class="thumb-lg ball bubble">
           <img src="img/a6.jpg" class="img-circle">
           <p class="h4 m-t m-b">John.Smith</p>
