--- a/tpl/blocks/header.html
+++ b/tpl/blocks/header.html
@@ -4,8 +4,13 @@
           <i class="glyphicon glyphicon-cog"></i>
         </button>
         <button class="pull-right visible-xs" ui-toggle-class="off-screen" data-target=".app-aside" ui-scroll-to="app">
+          <i class="fa fa-dedent fa-fw"></i>
+        </button>
+		
+		 <button class="pull-right visible-xs" ng-click="app.settings.menuFolded = !app.settings.menuFolded">
           <i class="glyphicon glyphicon-align-justify"></i>
         </button>
+		
         <!-- brand -->
         <a href="#/" class="navbar-brand text-lt">
           <i class="icon-book-open"></i>
