--- a/index.html
+++ b/index.html
@@ -65,18 +65,20 @@
   <!-- App -->
    <script src="js/app.js"></script> 
      <script src="js/config.js"></script>
-  <script src="js/config.lazyload.js"></script>
+ <!-- <script src="js/config.lazyload.js"></script> -->
   <script src="js/config.router.js"></script>
  <script src="js/main.js"></script>
  
  	
 		
  <script src="js/services/ui-load.js"></script>
+ <script src="js/services/authentication-service.js"></script>
+ 
  <script src="js/filters/fromNow.js"></script>
   <script src="js/directives/setnganimate.js"></script>
   <script src="js/directives/ui-butterbar.js"></script>
   <script src="js/directives/ui-focus.js"></script>
-  <script src="js/directives/ui-fullscreen.js"></script>
+ <!-- <script src="js/directives/ui-fullscreen.js"></script> -->
   <script src="js/directives/ui-jq.js"></script>
   <script src="js/directives/ui-module.js"></script>
   <script src="js/directives/ui-nav.js"></script>
@@ -84,6 +86,7 @@
   <script src="js/directives/ui-shift.js"></script>
   <script src="js/directives/ui-toggleclass.js"></script>
   <script src="js/controllers/bootstrap.js"></script>
+  <script src="js/controllers/signin.js"></script>
   
 </body>
 </html> 
