--- a/tpl/blocks/header.html
+++ b/tpl/blocks/header.html
@@ -68,9 +68,7 @@
             </ul>
             <!-- / dropdown -->
           </li>
-          <li class="hidden-xs">
-            <a ui-fullscreen></a>
-          </li>
+          
           <li class="dropdown" dropdown>
             <a href class="dropdown-toggle" dropdown-toggle>
               <i class="icon-bell fa-fw"></i>
@@ -114,7 +112,7 @@
                 <img src="img/a0.jpg" alt="...">
                 <i class="on md b-white bottom"></i>
               </span>
-              <span class="hidden-sm hidden-md">John.Smith</span> <b class="caret"></b>
+              <span class="hidden-sm hidden-md">{{app.userProfile.username}}</span> <b class="caret"></b>
             </a>
             <!-- dropdown -->
             <ul class="dropdown-menu animated fadeInRight w">
