--- a/tpl/profiles.html
+++ b/tpl/profiles.html
@@ -1,6 +1,6 @@
 
 
-<div class="row">
+<div class="">
    <div class="list-group list-group-lg list-group-sp">
             <a ui-sref="detail" class="list-group-item clearfix">
               <span class="pull-left thumb-sm avatar m-r">
