--- a/tpl/page_signin.html
+++ b/tpl/page_signin.html
@@ -1,8 +1,8 @@
-<div class="container w-xxl w-auto-xs"  ng-controller="SigninFormController" ng-init="app.settings.container = false;">
+<div class="container w-xxl w-auto-xs"  style="position:relative;"ng-controller="SigninFormController" ng-init="app.settings.container = false;">
   <a href class="navbar-brand block m-t">{{app.name}}</a>
   <div class="m-b-lg">
     <div class="wrapper text-center">
-      <strong>Sign in to get in touch</strong>
+      <strong>Sign in to get in touch</strong> 
     </div>
 	<div ng-show="error" class="alert alert-danger">{{error}}</div>
     <form name="form" class="form-validation">
