--- a/tpl/page_signup.html
+++ b/tpl/page_signup.html
@@ -1,11 +1,11 @@
-    <div class="container w-xxl w-auto-xs" ng-controller="SignupFormController" ng-init="app.settings.container = false;">
+    <div class="container w-xxl w-auto-xs" style="position:relative;" ng-controller="SignupFormController" ng-init="app.settings.container = false;">
       <a href class="navbar-brand block m-t">{{app.name}}</a>
       <div class="m-b-lg">
         <div class="wrapper text-center">
           <strong>Sign up to find interesting thing</strong>
         </div>
         <form name="form" class="form-validation">
-          <div class="text-danger wrapper text-center" ng-show="authError">
+          <div class="text-success wrapper text-center" ng-show="authError">
               {{authError}}
           </div>
           <div class="list-group list-group-sm">
